--- a/BrTiledLoader/BrTiledLoader.csproj
+++ b/BrTiledLoader/BrTiledLoader.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Src\AssetHandlerTiledMap.cs" />
     <Compile Include="Src\TiledLayer.cs" />
     <Compile Include="Src\TiledLoader.cs" />
     <Compile Include="Src\TiledMap.cs" />
@@ -58,6 +59,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BrAssetsManager\BrAssetsManager.csproj">
+      <Project>{A57BDD8D-EF30-42DB-AC43-54D7681FFA7A}</Project>
+      <Name>BrAssetsManager</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BrUtility\BrUtility.csproj">
       <Project>{8c9d918a-04f3-4c23-bd50-7f25684c67a1}</Project>
       <Name>BrUtility</Name>
