--- a/BrDialogue/BrDialogue.csproj
+++ b/BrDialogue/BrDialogue.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BrDialogue</RootNamespace>
     <AssemblyName>BrDialogue</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -43,11 +46,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Src\AssetHandlerDialogue.cs" />
     <Compile Include="Src\Dialogue.cs" />
+    <Compile Include="Src\DialogueChooser.cs" />
+    <Compile Include="Src\DialogueChooserInput.cs" />
     <Compile Include="Src\DialogueEffect.cs" />
     <Compile Include="Src\DialogueEffectInstance.cs" />
     <Compile Include="Src\DialogueManager.cs" />
+    <Compile Include="Src\DialogueManagerRW.cs" />
     <Compile Include="Src\DialogueSet.cs" />
     <Compile Include="Src\DialogueSetInstance.cs" />
+    <Compile Include="Src\DialogueUpdater.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BrAssetsManager\BrAssetsManager.csproj">
@@ -61,7 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL.Core">
-      <Version>3.8.0.1</Version>
+      <Version>3.8.0.2</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
