--- a/BrUtility/BrUtility.csproj
+++ b/BrUtility/BrUtility.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BrUtility</RootNamespace>
     <AssemblyName>BrUtility</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -42,23 +45,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Angle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Src\AnimationSystem\Animation.cs" />
     <Compile Include="Src\AnimationSystem\Frame.cs" />
+    <Compile Include="Src\Assert.cs" />
     <Compile Include="Src\Camera.cs" />
     <Compile Include="Src\DrawHelper.cs" />
     <Compile Include="Src\EffectSystem\CompoundShaderDraw.cs" />
     <Compile Include="Src\EngineMathHelper.cs" />
     <Compile Include="Src\Enums.cs" />
     <Compile Include="Src\Extentions.cs" />
+    <Compile Include="Src\FastList.cs" />
     <Compile Include="Src\FrameCounter.cs" />
     <Compile Include="Src\GameKeyboard.cs" />
     <Compile Include="Src\GameMouse.cs" />
+    <Compile Include="Src\GenericPool.cs" />
+    <Compile Include="Src\QuadTreeSystem\IAABB.cs" />
     <Compile Include="Src\InputManager.cs" />
+    <Compile Include="Src\IPoolable.cs" />
     <Compile Include="Src\Keybind.cs" />
     <Compile Include="Src\Logger.cs" />
     <Compile Include="Src\MessageBoxManager.cs" />
     <Compile Include="Src\Ported\PriorityQueue.cs" />
+    <Compile Include="Src\QuadTreeSystem\QuadTree.cs" />
     <Compile Include="Src\RectangleF.cs" />
     <Compile Include="Src\RotatedRectangleF.cs" />
     <Compile Include="Src\Size.cs" />
@@ -72,7 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL.Core">
-      <Version>3.8.0.1</Version>
+      <Version>3.8.0.2</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
