--- a/BrProfiler/BrProfiler.csproj
+++ b/BrProfiler/BrProfiler.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Src\BrProfiler.cs" />
+    <Compile Include="Src\Profiler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
