--- a/BrUtility/BrUtility.csproj
+++ b/BrUtility/BrUtility.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Src\AnimationSystem\Frame.cs" />
     <Compile Include="Src\Assert.cs" />
     <Compile Include="Src\Camera.cs" />
+    <Compile Include="Src\DataStructures\IAABBF.cs" />
     <Compile Include="Src\DrawHelper.cs" />
     <Compile Include="Src\EffectSystem\CompoundShaderDraw.cs" />
     <Compile Include="Src\EngineMathHelper.cs" />
@@ -61,18 +62,19 @@
     <Compile Include="Src\GameKeyboard.cs" />
     <Compile Include="Src\GameMouse.cs" />
     <Compile Include="Src\GenericPool.cs" />
-    <Compile Include="Src\QuadTreeSystem\IAABB.cs" />
+    <Compile Include="Src\DataStructures\IAABB.cs" />
     <Compile Include="Src\InputManager.cs" />
     <Compile Include="Src\IPoolable.cs" />
     <Compile Include="Src\Keybind.cs" />
     <Compile Include="Src\Logger.cs" />
     <Compile Include="Src\MessageBoxManager.cs" />
     <Compile Include="Src\Ported\PriorityQueue.cs" />
-    <Compile Include="Src\QuadTreeSystem\QuadTree.cs" />
+    <Compile Include="Src\DataStructures\QuadTree.cs" />
     <Compile Include="Src\RectangleF.cs" />
     <Compile Include="Src\RotatedRectangleF.cs" />
     <Compile Include="Src\Size.cs" />
     <Compile Include="Src\SourceRectangle.cs" />
+    <Compile Include="Src\DataStructures\SpatialHash.cs" />
     <Compile Include="Src\TextHelper.cs" />
     <Compile Include="Src\Utility.cs" />
     <Compile Include="Src\VectorHelper.cs" />
