--- a/BrAssetsManager/BrAssetsManager.csproj
+++ b/BrAssetsManager/BrAssetsManager.csproj
@@ -58,9 +58,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.DesktopGL" PrivateAssets="All">
-      <Version>3.8.0.1641</Version>
-    </PackageReference>
+    <ProjectReference Include="..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj">
+      <Project>{ea24c086-066a-4a64-8bed-4db102f2b00c}</Project>
+      <Name>MonoGame.Framework.WindowsDX</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
