--- a/BrNineSlice/BrNineSlice.csproj
+++ b/BrNineSlice/BrNineSlice.csproj
@@ -49,6 +49,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj">
+      <Project>{ea24c086-066a-4a64-8bed-4db102f2b00c}</Project>
+      <Name>MonoGame.Framework.WindowsDX</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BrAssetsManager\BrAssetsManager.csproj">
       <Project>{a57bdd8d-ef30-42db-ac43-54d7681ffa7a}</Project>
       <Name>BrAssetsManager</Name>
@@ -59,9 +63,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.DesktopGL" PrivateAssets="All">
-      <Version>3.8.0.1641</Version>
-    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
