--- a/BrUtility/BrUtility.csproj
+++ b/BrUtility/BrUtility.csproj
@@ -1,103 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8C9D918A-04F3-4C23-BD50-7F25684C67A1}</ProjectGuid>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BrUtility</RootNamespace>
-    <AssemblyName>BrUtility</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile />
+    <Configurations>Debug;DebugNoTracy;Release;ReleaseNoProfiling</Configurations>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>7.3</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>7.3</LangVersion>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Src\Angle.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Src\AnimationSystem\Animation.cs" />
-    <Compile Include="Src\AnimationSystem\Frame.cs" />
-    <Compile Include="Src\Assert.cs" />
-    <Compile Include="Src\Camera.cs" />
-    <Compile Include="Src\DataStructures\IAABBF.cs" />
-    <Compile Include="Src\DrawHelper.cs" />
-    <Compile Include="Src\EffectSystem\CompoundShaderDraw.cs" />
-    <Compile Include="Src\EngineMathHelper.cs" />
-    <Compile Include="Src\Enums.cs" />
-    <Compile Include="Src\Extentions.cs" />
-    <Compile Include="Src\FastList.cs" />
-    <Compile Include="Src\FrameCounter.cs" />
-    <Compile Include="Src\GameKeyboard.cs" />
-    <Compile Include="Src\GameMouse.cs" />
-    <Compile Include="Src\GenericPool.cs" />
-    <Compile Include="Src\DataStructures\IAABB.cs" />
-    <Compile Include="Src\InputManager.cs" />
-    <Compile Include="Src\IPoolable.cs" />
-    <Compile Include="Src\Keybind.cs" />
-    <Compile Include="Src\Logger.cs" />
-    <Compile Include="Src\MessageBoxManager.cs" />
-    <Compile Include="Src\Ported\PriorityQueue.cs" />
-    <Compile Include="Src\DataStructures\QuadTree.cs" />
-    <Compile Include="Src\RectangleF.cs" />
-    <Compile Include="Src\RotatedRectangleF.cs" />
-    <Compile Include="Src\Size.cs" />
-    <Compile Include="Src\SourceRectangle.cs" />
-    <Compile Include="Src\DataStructures\SpatialHash.cs" />
-    <Compile Include="Src\TextHelper.cs" />
-    <Compile Include="Src\Utility.cs" />
-    <Compile Include="Src\VectorHelper.cs" />
-  </ItemGroup>
   <ItemGroup>
     <Folder Include="Src\AssetHandlers\" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="System.Memory" Version="4.6.3" />
+    <PackageReference Include="TiledSharp" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>12.0.3</Version>
-    </PackageReference>
-    <PackageReference Include="System.Memory">
-      <Version>4.5.5</Version>
-    </PackageReference>
-    <PackageReference Include="TiledSharp">
-      <Version>1.0.1</Version>
-    </PackageReference>
+    <ProjectReference Include="..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsDX.csproj">
-      <Project>{ea24c086-066a-4a64-8bed-4db102f2b00c}</Project>
-      <Name>MonoGame.Framework.WindowsDX</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
